--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/Users/alizehassan/fuzzy-octo-enigma/img.jpg");
+    background-image: url("img.jpg");
     background-position: center;
     background-size: cover;
 }
